tool 'builtin_brush.draw' not found for space 'IMAGE_EDITOR' #63443

Closed
opened 2019-04-10 01:10:18 +02:00 by ronald johnson · 10 comments

Blender Version
Broken: blender-2.80.0-git.2a79e3463130

Short description of error
A warning with "tool 'builtin_brush.draw' not found for space 'IMAGE_EDITOR'." appears whenever i switch to the texture paint workspace.

Exact steps for others to reproduce the error
Open blender then switch to the texture paint workspace

**Blender Version** Broken: blender-2.80.0-git.2a79e3463130 **Short description of error** A warning with "tool 'builtin_brush.draw' not found for space 'IMAGE_EDITOR'." appears whenever i switch to the texture paint workspace. **Exact steps for others to reproduce the error** Open blender then switch to the texture paint workspace
Author

Added subscriber: @billyand

Added subscriber: @billyand
Campbell Barton was assigned by Sebastian Parborg 2019-04-10 18:26:21 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

I am not able to reproduce this one anymore. Should we close this?

I am not able to reproduce this one anymore. Should we close this?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

If someone manages to redo they can give us steps, blend file etc.
Closing.

If someone manages to redo they can give us steps, blend file etc. Closing.

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I can redo this with Load Factory Settings and going to Texture Paint workspace.

I can redo this with Load Factory Settings and going to Texture Paint workspace.

This issue was referenced by eec47f284a

This issue was referenced by eec47f284aeb9fce670e70252af4bac125b4a9e3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63443
No description provided.