Fix T63443: tool 'builtin_brush.draw' not found for space 'IMAGE_EDITOR'